<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">KN-GraphIt!</string>
    
    <string name="errorInicioAplicacion">The application failed to start.</string>
    <string name="errorAltaChart">Failed to add the Chart.</string>
    <string name="errorActualizacionChart">Failed to update the Chart.</string>
    <string name="errorEliminacionChart">Failed to remove the Chart.</string>
    <string name="error_alta_chart_incompleto">You must complete the Name and Unit.</string>
    <string name="errorAltaItemChart">Failed to add the Item. </string>
    <string name="errorActualizacionItemChart">Failed to update the Item.</string>
    <string name="error_alta_item_incompleto">You must complete the Value.</string>
    <string name="errorEliminacionItem">Failed to remove the Item.</string>
    <string name="errorEliminacionYear">Failed to remove the Items.</string>
    <string name="errorEliminacionMonth">Failed to remove the Items.</string>
    <string name="error_ver_publicaciones">Failed to show all publications.</string>
    <string name="error_enviar_mail">Failed to send the message.</string>
    <string name="error_importar_csv">Failed to import CSV files.</string>
    <string name="error_exportar_csv">Failed to export CSV file.</string>
    <string name="error_exportar_txt">Failed to export TXT file.</string>
    
    
    <string name="label_nombre">NAME</string>
    <string name="label_descripcion">DESCRIPTION</string>
    <string name="label_unidad">UNIT</string>
    <string name="label_guardar">SAVE</string>
	<string name="label_si">Accept</string>
    <string name="label_no">Cancel</string>
    <string name="label_fecha">DATE</string>
    <string name="label_valor">VALUE</string>    
    <string name="label_hora">TIME</string>
    <string name="label_year">YEAR</string>
    <string name="label_month">MONTH</string>
    <string name="label_day">DAY</string>    
    <string name="label_cant_meses_reg">registered months:</string>
    <string name="label_cant_dias_reg"> - items:</string>   
    <string name="label_background">BACKGROUND</string>
    <string name="label_line">LINE</string>
    <string name="label_grid">GRID</string>
    <string name="label_labels">LABEL</string>
    <string name="label_timeformat">TIME FORMAT</string>
    <string name="label_stylepoint">POINT STYLE</string>
    <string name="label_mostrar_grilla">Show Grid</string>
    <string name="label_mostrar_valores">Show Values</string>
    <string name="label_selectColor">Selected color:</string>  
    <string name="label_pickColor">PICK COLOR</string>  
    <string name="label_comparar">COMPARE</string>      
    <string name="label_comparacion_sobrepuesta">OVERLAPPING</string> 
    <string name="label_comparacion_tiempo">IN TIME</string>  
    <string name="label_ok">OK</string>
    <string name="label_configuracion">CHART VIEW SETTINGS</string>
    <string name="label_comparacion">COMPARISON</string> 
    <string name="label_listado_items">ITEM LIST</string>
    <string name="label_detalle_items">ITEM DETAILS</string>
    <string name="label_fecha_hora">DATE-TIME</string>
     
    <string name="label_circulo">CIRCLE</string>
    <string name="label_diamante">DIAMOND</string>
    <string name="label_punto">POINT</string>
    <string name="label_cuadrado">SQUARE</string>
    <string name="label_triangulo">TRIANGLE</string>
    <string name="label_x">X</string>
    
  
	
	<string name="menu_agregar_chart">Add Chart</string>
	<string name="menu_agregar_item_chart">Add Item</string>
	<string name="menu_eliminar_itemchart">Remove Item</string>
	<string name="menu_dibujar_chart">Draw Chart</string>
    <string name="menu_editar_chart">Edit Chart</string>
    <string name="menu_borrar_chart">Remove Chart</string>
    <string name="menu_comparar_charts">Compare Charts</string>
    <string name="menu_configuracion_comparacion">Comparison Settings</string>
    <string name="menu_configurar_chart">Chart Settings</string>
    <string name="menu_export_chart">Export Chart</string>
    <string name="menu_export_text">Export Text</string>
    <string name="menu_help">Help</string>
    <string name="menu_about_me">About us...</string>
    <string name="menu_import_csv">Import CSV</string>
    <string name="menu_export_csv">Export CSV</string>
    
	
	<string name="title_nuevo_chart">New Chart</string>
	<string name="title_nuevo_item">Item</string>
	<string name="title_listado_principal">CHARTS LIST</string>
	<string name="title_config_chart">Chart Setting:</string>
	<string name="title_comparison_chart">CHARTS COMPARISON</string>
	<string name="title_help">HELP</string>
	<string name="title_acerca_de">ABOUT US...</string>
    <string name="title_import_csv">IMPORTING CSV</string>
    <string name="title_export_csv">EXPORTING CSV</string>
    	
	<string name="title_select_format">Select format...</string>
	
    
    <string name="format_date_time">Date Time,Value</string>
    <string name="format_date">Date,Value</string>
    <string name="format_all_separated">Year,Month,Day,Hour,Min,Value</string>
	
    
	
	<string name="hint_chart">Chart</string>
	
	 <string name="text_sinDatos">WITHOUT DATA</string>
	 
	 <string name="mensaje_borrar_chart">: The Chart will be removed. Are you sure?</string>
	 <string name="mensaje_borrar_item">The Item will be removed. Are you sure?</string>
	 <string name="mensaje_borrar_year">All Items in this year will be removed. Are you sure?</string>
	 <string name="mensaje_borrar_month">All Items in this year and month will be removed. Are you sure?</string>
     <string name="mensaje_sin_items">There are no items to chart.</string>
     <string name="mensaje_tipo_comparacion">Select comparison type:</string>
     <string name="mensaje_exito_exportar_chart">The Chart picture has been stored:</string>
     <string name="mensaje_exito_exportar_txt">TXT file has been stored successfully.</string>
     <string name="mensaje_exito_exportar_csv">CSV file has been stored successfully.</string>
     <string name="mensaje_exito_importar_csv">CSV files has been imported successfully.</string>
     <string name="mensaje_error_exportar_chart">The Chart picture could not be stored.</string>     
     <string name="mensaje_max_comparacion">You must select up to 6 Charts to compare.</string>     
     <string name="mensaje_min_comparacion">You must select at least 2 Charts to compare.</string>  
     <string name="mensaje_error_dibujar">The Chart could not be plotted.</string> 
     <string name="mensaje_error_guardar">The data could not be saved.</string>
     <string name="mensaje_error_version_lite">Only 7 Items can be stored in the Lite version.</string>
     
     <string name="mensaje_error_tarjeta_solo_lectura">The SD-CARD is in read-only mode.</string>
	 <string name="mensaje_error_tarjeta_no_formato">Error, the SD-CARD cannot be used, not in a format accepted or not properly formatted.</string>
     <string name="mensaje_error_tarjeta_no_montada">Error, you need to install an SD-CARD to your mobile.</string>
     <string name="mensaje_error_tarjeta_shared">Error, the SD-CARD is being shared. Disconnect the USB cable and try again.</string>
     <string name="mensaje_error_tarjeta_unmountable">Error, the SD-CARD cannot be mounted. \n This may be because is corrupted or damaged.</string>
     <string name="mensaje_error_tarjeta_unmounted">Error, the SD-CARD is present in the mobile but not mounted. Mount it before using the program.</string>
 
     <string name="mensaje_pocos_chart">Not enough graphics (with items) for comparison.</string> 
     <string name="mensaje_importando_csv">Please wait! Importing data...</string> 
     <string name="mensaje_exportando_csv">Please wait! Exporting data...</string>
     <string name="mensaje_nada_importar">There are no CSV files to import...</string>
     
     <string name="help_draw">Plot a Chart or comparison of several Charts.</string> 
     <string name="help_list_items">Shows the Item management.</string>
     <string name="help_edit">Shows a screen for editing a Chart or a Item, depending on the context where it is.</string> 
	 <string name="help_remove">Delete a Chart, all Items associated with a year, all Items associated with a month-year, or an Item.</string>  
     <string name="help_config">Displays a screen for setting the appearance of a Chart or comparison of Charts.</string>
     <string name="help_exporta">Stores a JPEG image of the Chart shown. If the graph corresponds to a Chart, the image is stored in the folder KNGraphIt-Pics. If the graph corresponds to a comparison of Charts, the image is stored in the folder KNGraphIt-Comparison.</string>   
	 <string name="help_add_item">Displays a screen to register Items.</string> 
	 <string name="help_show_item">Displays a screen with all Items related to the same month and year.</string>
     <string name="help_txt">Stores a TXT file with details of the entries related to the graph. It is stored in the folder KNGraphIt-Txt.</string>
	 <string name="help_import_csv"><![CDATA[The App imports data from CSV files (.csv) that are stored in the folder: KNGraphIt/CSV. The data to be imported must be in one of the following formats: 1) DATE TIME,VALUE 2) DATE,VALUE 3) YEAR,MONTH,DAY,HOUR,MIN,VALUE. At the beginning of the import, you must select the format that matches the format of data files. If the data is valid, it will create a Graphic with the name of the file and its entries will be loaded from the content. If you already have a Graphic that matches the file name, the items in your Graphic will be updated with the retrieved file (loading items that do not exist or updating the value of those that agree date and time). Below is an example of the format:]]></string>	 	 
	 <string name="help_export_csv"><![CDATA[The App exports a Graphic entries in a CSV file(.csv) with the same name of your Graphic and it\'s stored in the folder KNGraphIt/CSV. When exporting, you must select the appropriate format for storing data: 1) DATE TIME,VALUE 2) DATE,VALUE 3) YEAR,MONTH,DAY,HOUR,MIN,VALUE.]]></string>
	 <string name="help_import_csv_example"><![CDATA[Formato: DATE TIME,VALUE  \n\n 2011/01/01 10:20,100.0 \n 2011/01/31 10:30,120.5 \n 2011/11/30 11:30,150.5 \n \n Format: DATE,VALUE  \n \n 2011/01/01,100.0 \n 2011/01/31,120.50 \n 2011/11/30,150.5 \n \n Format: YEAR,MONTH,DAY,HOUR,MIN,VALUE \n \n 2011,01,01,10,20,100.0 \n 2011,01,31,10,30,120.50 \n 2011,11,30,11,30,150.5]]></string>	
	 	 
   	<string name="text_acerca_de_mail">support@boxico.com.ar</string>	
   	<string name="text_acerca_de">Made by</string>
   	<string name="text_acerca_de_sugerencia">For comments, send a message to:</string>
   	<string name="text_acerca_de_verPublicaciones">-ALL PUBLICATIONS-</string>
	 	 	 
	<string name="boxico">BOXICO</string>	 	  	
</resources>
