<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/text_acerca_de"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/text_acerca_de_sugerencia"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textAcercaDeMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/text_acerca_de_mail"
        android:textColor="@color/spinner_color"
        android:textSize="18sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/textTodasLasPublicaciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/text_acerca_de_verPublicaciones"
        android:textColor="@color/color_naranja"
        android:textSize="18sp"
        android:textStyle="bold" />


</LinearLayout>