<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="3dp"
    android:background="@color/color_gris_claro"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_gris_oscuro"
        android:padding="10dp"
        android:textColor="@color/color_blanco"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:gravity="center"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/btnAddItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/menu_agregar_item_chart"
            android:src="@drawable/manage_item_main" />

        <ImageView
            android:id="@+id/btnEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:contentDescription="@string/menu_editar_chart"
            android:src="@drawable/edit_chart_main" />

        <ImageView
            android:id="@+id/btnDraw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:contentDescription="@string/menu_dibujar_chart"
            android:src="@drawable/draw_chart_main" />

        <ImageView
            android:id="@+id/btnRemove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:contentDescription="@string/menu_eliminar_itemchart"
            android:src="@drawable/trash_chart_main" />

        <ImageView
            android:id="@+id/btnConfig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:contentDescription="@string/menu_configurar_chart"
            android:src="@drawable/setting_chart_main" />


    </LinearLayout>

</LinearLayout>
