<?xml version="1.0" encoding="utf-8"?>

<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/chart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="55dp"
        android:orientation="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="true">

        <TextView
            android:id="@+id/nameChartItemManager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_gris_claro"
            android:gravity="start"
            android:padding="4dp"
            android:textSize="13sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/descChartItemManager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/color_gris_oscuro"
            android:padding="5dp"
            android:textColor="@color/color_blanco"
            android:textSize="13sp" />


        <ExpandableListView
            android:id="@android:id/list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:dividerHeight="3dp"
            android:fastScrollEnabled="true"
            android:scrollbarAlwaysDrawVerticalTrack="true"></ExpandableListView>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="bottom"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/btnDrw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/menu_dibujar_chart"
            android:src="@drawable/draw_chart_main" />


        <ImageView
            android:id="@+id/btnAddItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginLeft="22dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/menu_agregar_item_chart"
            android:src="@drawable/add_item_main" />

        <ImageView
            android:id="@+id/btnEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginLeft="22dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/menu_editar_chart"
            android:src="@drawable/edit_chart_main" />

        <ImageView
            android:id="@+id/btnRemove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginLeft="22dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/menu_eliminar_itemchart"
            android:src="@drawable/trash_chart_main" />

        <ImageView
            android:id="@+id/btnConfig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginLeft="22dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/menu_configurar_chart"
            android:src="@drawable/setting_chart_main" />

    </LinearLayout>

</merge>
