<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">


        <Button
            android:id="@+id/buttonPickDate"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:text="@string/label_fecha"
            android:textColor="@color/color_gris"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/fechaEntrada"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">


        <Button
            android:id="@+id/buttonPickTime"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:text="@string/label_hora"
            android:textColor="@color/color_gris"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/horaEntrada"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="15dp">


        <TextView
            android:id="@+id/label_valor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_valor" />


        <EditText
            android:id="@+id/valorEntrada"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_valor"
            android:inputType="numberDecimal|numberSigned"
            android:maxLength="12"
            android:layout_marginStart="5dp"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <Button
            android:id="@+id/buttonGuardarItem"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/label_guardar"
            android:textColor="@color/color_gris"
            android:textStyle="bold" />
    </LinearLayout>


</LinearLayout>
