<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:layout_margin="5dp"
    android:background="@color/color_gris_claro"
    android:padding="8dp">

    <TextView
        android:id="@+id/labelMonth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:text="@string/label_month"
        android:textColor="@color/color_gris_oscuro"
        android:textSize="12sp" />


    <TextView
        android:id="@+id/monthDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:paddingStart="6dp"
        android:paddingLeft="6dp"
        android:paddingEnd="6dp"
        android:paddingRight="6dp"
        android:textColor="@color/color_gris_oscuro"
        android:textSize="17sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/cantDiasRegistrados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:textColor="@color/color_gris_oscuro"
        android:textSize="12sp" />


    <ImageView
        android:id="@+id/btnEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:contentDescription="@string/menu_editar_chart"
        android:src="@drawable/manage_item" />

    <ImageView
        android:id="@+id/btnRemove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:contentDescription="@string/menu_eliminar_itemchart"
        android:src="@drawable/remove_icon" />

</LinearLayout>
